# pytada

./: Makefile  README.md  setup.cfg  setup.py
tada/conversion/: __init__.py  json.py  raw.py
tada/models/: base.py  status.py  todo.py
tada/query/: base.py  constraint.py  constraints.py  factory.py  query.py  selectors.py
tada/storage/: base.py  jsonfile.py  tokens.py
tada/utils/: cli.py  config.py  constraints.py  functional.py  funtional.py  general.py  selectors.py  structures.py  transformers.py
tests/: test_functional.py  test_model_status.py  test_model_todo.py  test_query_constraint.py  test_query_factory.py  test_utils_argvcliparser.py  test_utils_config.py  test_utils_tomlconfigparser.py
