[metadata]
name = tada
version = file: tada/_version.txt
author = Mohsen MK
author-email = cthulhu.irl@protonmail.com
home-page = https://github.com/cthulhu-irl/pytada
description = Highly Customizable Nested Todo Manager
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords = tada, todo, todo manager, task, task manager
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Bug Tracker = https://github.com/cthulhu-irl/pytada/issues

[options]
zip_safe = false
include_package_data = true
python_requires = > 3.5
packages = pytada
test_suite = tests
setup_requires =
    setuptools >=38.3.0
tests_require =
    green

[options.extras_require]
dev =
    sphinx
    mypy
test =
    green
    coverage

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[flake8]
max-line-length = 80
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
